# Modelling_workshop

./: Modelling_workshop.ipynb  Modelling_workshop_COMPLETE.ipynb  P_dataset.mat  models.py  mystery_dataset.npy  plotting.py  requirements.rtf  requirements.txt  setup.cfg
