[metadata]
name = Modelling_workshop
version = 0.0.0
author = Juan Vidal-Perez
project_urls =
    Documentation = https://github.com/Juan-VidalPerez/Modelling_workshop
    Source = https://github.com/Juan-VidalPerez/Modelling_workshop
description = Modelling_workshop
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    tqdm
    IPython
    seaborn
    pandas
python_requires = >=3.7
include_package_data = False

